--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "exceljs": "^1.6.3"
   },
   "dependencies": {
+    "exceljs": "^1.6.3",
     "async": "^2.6.1"
   },
   "repository": {
