--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "example": "example"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node example/app.js"
   },
   "author": "",
   "license": "ISC",
