--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "exceljs": "^1.6.3",
     "async": "^2.6.1"
