--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
-    "exceljs": "^4.2.1"
+    "exceljs": "3.8.2"
   },
   "repository": {
     "type": "git",
